<resources>
    <string name="app_name">T-CRM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category List</string>
    <string name="menu_part">Parts List</string>
    <string name="menu_shopping">Shopping List</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="app_title">ADAM</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="new_folder_cancel">Cancel</string>
    <string name="new_folder_ok">OK</string>
    <string name="option_create_folder">New folder</string>
    <string name="options_delete">Delete</string>
    <string name="over_limit_msg">You have exceeded Images limit</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_storage_never_ask">The permission to access Files is not granted, please go to settings to grant it</string>
    <string name="project_id">t-crm-d1a9d</string>
    <string name="search_menu_title">Search</string>
    <string name="spinner_task_type">Select task types</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="tedpermission_close">Close</string>
    <string name="tedpermission_confirm">Confirm</string>
    <string name="tedpermission_setting">Setting</string>
    <string name="title_choose">Choose</string>
    <string name="title_choose_dict_file">Pick a dictionary</string>
    <string name="add">Add</string>
    <string name="searching">Search ...</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="save">Save</string>
    <string name="small_save">save</string>
    <string name="setting">Settings</string>
    <string name="title_for_tasks_list">Title for tasks list ...</string>
    <string name="mobile_number">Mobile number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="postal_code">Postal code</string>
    <string name="date_form_created">Date from created</string>
    <string name="date_form_updated">Date from Updated</string>
    <string name="date_and_time">Date and Time</string>
    <string name="further_note">Further note</string>
    <string name="remind_me">Remind me</string>
    <string name="date_for_reminder">Date for reminder</string>
    <string name="select_category">Select Category</string>
    <string name="delete">Delete</string>
    <string name="sms_status">SMS STATUS</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send EMAIL</string>
    <string name="date_attachment_deletes">Date Attachment Deletes</string>
    <string name="attachments">Attachments</string>
    <string name="attachment_list_empty">Attachment list is empty</string>
    <string name="invoices">Invoices</string>
    <string name="invoice_list_empty">Invoice list is empty</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="category_name">Category Name</string>
    <string name="create_pdf">Create PDF</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="to">To</string>
    <string name="from_address">From Address</string>
    <string name="add_invoice_item">Add Invoice Item</string>
    <string name="str_qty">Qty</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="excluding_vat">Excluding VAT</string>
    <string name="vat_amount">VAT Amount</string>
    <string name="payed_amount">Payed Amount</string>
    <string name="due_total">Due Total</string>
    <string name="comment">Comment</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="date_deleted">Date deleted</string>
    <string name="edit_attach">Edit Attachment</string>
    <string name="new_category">New Category</string>
    <string name="category_list">Category List</string>
    <string name="customer_detail">"Customer Detail"</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="exit">exit</string>
    <string name="login_check">Checking user login … </string>
    <string name="invalid_input_userinfo">Please provide a valid login information!</string>
    <string name="registering">Registering ... </string>
    <string name="success_add">Added Successfully</string>
    <string name="logging">Logging in...</string>
    <string name="t_crm">T-CRM</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reset_sms">Reset sms</string>
    <string name="reset_sms_request">Are you sure you want to reset sms list ?</string>
    <string name="load_data">Loading data ...</string>
    <string name="sync_data">Syncing data ... </string>
    <string name="file">File</string>
    <string name="camera_or_image">Camera</string>
    <string name="select_attach_file">Select what you want to attach!</string>
    <string name="attach_file">Attach File</string>
    <string name="enter_message">Enter Message ...</string>
    <string name="send">Send</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_attach_request">Are you sure you want to delete attachment</string>
    <string name="small_close">close</string>
    <string name="close">close</string>
    <string name="default_notification_channel_id">9998877</string>
    <string name="select_status">Select Status</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="reset">Reset</string>
    <string name="show">Show</string>
    <string name="select_date">Select Date</string>
    <string name="select_period">Select\nPeriod</string>
    <string name="reset_period">Reset\nPeriod</string>
    <string name="reminder">Reminder</string>
    <string name="all_categories">All Categories</string>
    <string name="create_category">Creating category ...</string>
    <string name="load_category">Loading categories ... </string>
    <string name="quantity">Quantity</string>
    <string name="sms_sent">SMS SENT</string>
    <string name="sms_not_sent">SMS NOT SENT</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_sms_state">Edit SMS State</string>
    <string name="attach_selected">Attachment selected!</string>
    <string name="save_item">Save item</string>
    <string name="str_pno">PNO</string>
    <string name="minimum_quantity">Minimum Quantity</string>
    <string name="edit_part">Edit Part</string>
    <string name="add_part">Add Part</string>
    <string name="active">Active</string>
    <string name="attach">Attach</string>
    <string name="you_have_reminders">You Have Reminders</string>
    <string name="search_here">Search here ...</string>
    <string name="permission_check_message">"If you reject permission,you can not attach file\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="attach_document">Attach Document</string>
    <string name="alert">Alert</string>
    <string name="discard_change">Do you wan to discard the change?</string>

</resources>