<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_part"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_part" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>