<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bts.adamtest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.bts.adamtest.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_part"
        android:name="com.bts.adamtest.ui.parts.PartsListFragment"
        android:label="@string/menu_part"
        tools:layout="@layout/fragment_partlst" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.bts.adamtest.ui.shopping.ShoppingListFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_shoppinglst" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.bts.adamtest.ui.setting.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>