<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp">

        <ImageView
            android:id="@+id/btn_back"
            android:padding="16dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_action_back"/>

        <TextView
            android:textSize="16dp"
            android:textColor="@color/md_white_1000"
            android:gravity="center"
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_title"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/title_for_tasks_list"/>
            <EditText
                android:id="@+id/edt_mobile"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/mobile_number"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edt_email"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edt_name"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/name"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/edt_address"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/address"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <EditText
                    android:id="@+id/edt_town"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:hint="@string/town"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/edt_post_code"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <EditText
                    android:id="@+id/edt_date_created"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/date_form_created"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/edt_date_updated"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_form_updated"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <Button
                    android:background="@android:color/transparent"
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"/>
                <TextView
                    android:textColor="@color/md_white_1000"
                    android:id="@+id/btn_date"
                    android:background="@drawable/btn_bg_2"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_and_time"/>
            </LinearLayout>
            <EditText
                android:id="@+id/edt_further_none"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:minHeight="120dp"
                android:hint="@string/further_note"/>
            <Spinner
                android:id="@+id/spn_state"
                android:background="@drawable/btn_bg"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <CheckBox
                    android:id="@+id/chk_remind_me"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/remind_me"
                    android:layout_weight="1"/>
                <EditText
                    android:textSize="10dp"
                    android:id="@+id/edt_reminder_date"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:hint="@string/date_for_reminder"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_category"
                android:background="@drawable/btn_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/select_category"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <Button
                    android:textColor="@color/md_white_1000"
                    android:id="@+id/btn_save"
                    android:background="@drawable/btn_bg_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1"/>
                <Button
                    android:textColor="@color/md_white_1000"
                    android:id="@+id/btn_delete"
                    android:background="@drawable/btn_bg_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/delete"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <TextView
                    android:gravity="center"
                    android:id="@+id/txt_sms_staus"
                    android:background="@drawable/input_bg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/sms_status"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_send_sms"
                    android:background="@drawable/btn_bg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/send_sms"
                    android:layout_weight="1"/>
                <Button
                    android:textColor="@color/md_white_1000"
                    android:id="@+id/btn_send_email"
                    android:background="@drawable/btn_bg_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/send_email"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp">
                <EditText
                    android:textSize="10sp"
                    android:id="@+id/edt_date_attachment"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/date_attachment_deletes"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>
                <Button
                    android:textColor="@color/md_white_1000"
                    android:id="@+id/btn_attach"
                    android:background="@drawable/btn_bg_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/attach_document"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/md_black_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/attachments"/>
            <androidx.recyclerview.widget.RecyclerView
                android:orientation="vertical"
                android:id="@+id/recycler_attachments"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            <TextView
                android:gravity="center"
                android:id="@+id/txt_no_attachment"
                android:background="@drawable/input_bg"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_margin="8dp"
                android:text="@string/attachment_list_empty"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/md_black_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/invoices"/>
            <androidx.recyclerview.widget.RecyclerView
                android:orientation="vertical"
                android:id="@+id/recycler_invoices"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            <TextView
                android:gravity="center"
                android:id="@+id/txt_no_invoice"
                android:background="@drawable/input_bg"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_margin="8dp"
                android:text="@string/invoice_list_empty"/>
            <Button
                android:textColor="@color/md_white_1000"
                android:id="@+id/btn_add_invoice"
                android:background="@drawable/btn_bg_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_invoice"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
