<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="220dp"
    android:minWidth="240dp">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/md_blue_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_close"
            android:padding="12dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_action_close"/>

        <TextView
            android:textSize="16dp"
            android:textColor="@color/md_white_1000"
            android:gravity="center"
            android:id="@+id/dialog_title"
            android:padding="12dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/btn_delete"
            android:padding="12dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_action_trash"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_pno"
        android:background="@drawable/input_bg"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/str_pno"/>

    <EditText
        android:id="@+id/edt_description"
        android:background="@drawable/input_bg"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/edt_quantity"
        android:background="@drawable/input_bg"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/quantity"/>

    <EditText
        android:id="@+id/edt_minimum_quantity"
        android:background="@drawable/input_bg"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/minimum_quantity"/>

    <TextView
        android:textColor="@color/md_white_1000"
        android:gravity="center"
        android:id="@+id/btn_save"
        android:background="@drawable/btn_bg_3"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save"
        android:textAlignment="center"/>
</LinearLayout>
