<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/md_black_1000"
            android:id="@+id/txt_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/str_qty"
            android:layout_weight="1"/>

        <TextView
            android:textColor="@color/md_black_1000"
            android:id="@+id/txt_minimum_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/str_qty"
            android:layout_weight="1"/>

        <TextView
            android:textColor="@color/md_black_1000"
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/description"
            android:layout_weight="5"/>

        <TextView
            android:textColor="@color/md_black_1000"
            android:id="@+id/txt_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/price"
            android:layout_weight="2"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
