<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16dp"
            android:textColor="@color/md_black_1000"
            android:id="@+id/txt_title"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/str_qty"/>

        <LinearLayout
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:textSize="12dp"
                android:textColor="@color/md_black_1000"
                android:gravity="center"
                android:id="@+id/btn_delete"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/delete"
                android:layout_weight="1"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/md_black_1000"
                android:gravity="center"
                android:id="@+id/btn_edit"
                android:background="@drawable/input_bg"
                android:padding="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/edit"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
